# backend/src/interfaces/response.interface.ts
@@ -1,0 +1,5 @@
+export interface ApiResponse<T> {
+    successful: boolean;
+    message: string;
+    data: T | string;
+}
