# backend/src/models/category.ts
@@ -2,7 +2,7 @@ let mongoose = require('mongoose');
 
 // Category Schema
 let CategorySchema = mongoose.Schema({
-   
+
     title: {
         type: String,
         required: true
@@ -10,8 +10,8 @@ let CategorySchema = mongoose.Schema({
     slug: {
         type: String
     }
-    
+
 });
 
-let Category = module.exports = mongoose.model('Category', CategorySchema);
+export default mongoose.model('CategoryModel', CategorySchema);
 
